fixed background/header, added scrollbar, small css changes

--- a/client/src/components/css/Header.css
+++ b/client/src/components/css/Header.css
@@ -4,6 +4,8 @@ a {
 }
 .header {
   display: flex;
+  position: fixed;
+  top: -.25em;
   background: linear-gradient(#0e492c, #456f4b);
   justify-content: space-between;
   align-items: center;
